--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -18,3 +18,5 @@ jobs:
           plugin_lines: yes
           plugin_followup: yes
           plugin_projects: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
