--- a/.github/workflows/metrics.yaml
+++ b/.github/workflows/metrics.yaml
@@ -2,9 +2,9 @@ name: Metrics
 
 on:
   workflow_dispatch:
-  schedule:
-   - cron: "0 0 * * *"
-  push:
+  # schedule:
+  #  - cron: "0 0 * * *"
+  # push:
 
 jobs:
   github-metrics:
